--- a/Twitter_Sentiment_Analysis.ipynb
+++ b/Twitter_Sentiment_Analysis.ipynb
@@ -1855,7 +1855,7 @@
    "source": [
     "## MODELING\n",
     "For this part we want to create models in two ways:\n",
-    "1. `BinarY Models`: This will have only two classes in the target value i.e. `Positive` and `Negative`\n",
+    "1. `Binay Models`: This will have only two classes in the target value i.e. `Positive` and `Negative`\n",
     "2. `Multiclass Models`: These will have more than two classes in the target variable i.e. `Postive`, `Neutral` and `Negative`"
    ]
   },
@@ -2922,8 +2922,10 @@
     "    It shows similar patterns: the model is heavily biased towards class 1, with only 7 out of 95 instances of class 0 correctly predicted, leading to a recall of 0.07 for class 0. Again, the high accuracy (0.86) is misleading due to class imbalance.\n",
     "\n",
     "Interpretation of the Graph:\n",
+    "\n",
     "`Blue line` (Training ROC curve, AUC = 0.97):\n",
     "The ROC curve for the training set shows excellent performance. The curve is close to the top-left corner, and the AUC of 0.97 indicates that the model is performing very well on the training data.\n",
+    "\n",
     "`Red line` (Test ROC curve, AUC = 0.85):\n",
     "The ROC curve for the test set is not as close to the top-left corner as the training curve, but it still shows reasonably good performance. The AUC of 0.85 suggests that the model can distinguish between the classes well on unseen data, but it is not as perfect as the training performance.\n",
     "\n",
@@ -3490,6 +3492,7 @@
    "metadata": {},
    "source": [
     "Interpretation of the results:\n",
+    "\n",
     "`Training set`:\n",
     "The high accuracy (96.6%) and balanced precision, recall, and F1-scores indicate that SMOTE worked well on the training set. Since SMOTE creates synthetic samples, the model was able to learn from a more balanced dataset, resulting in good performance across both classes.\n",
     "\n",
@@ -3677,7 +3680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 371,
+   "execution_count": 384,
    "metadata": {},
    "outputs": [
     {
@@ -3709,8 +3712,8 @@
       "\n",
       "\n",
       "\n",
-      "the accuracy for the training set is: 0.9661654135338346\n",
-      "the accuracy for the test set is: 0.7389705882352942\n",
+      "the accuracy for the training set is: 0.9680451127819549\n",
+      "the accuracy for the test set is: 0.8630514705882353\n",
       "\n",
       "\n"
      ]
@@ -3746,8 +3749,8 @@
     "print(classification_report(smote_y_test, test_preds))\n",
     "print('\\n\\n')\n",
     "#Show accuracy for both sets\n",
-    "print('the accuracy for the training set is:',accuracy_score(smote_y_train, smote_log_train_pred))\n",
-    "print('the accuracy for the test set is:', accuracy_score(smote_y_test, smote_test_log_pred))\n",
+    "print('the accuracy for the training set is:',accuracy_score(smote_y_train, training_preds))\n",
+    "print('the accuracy for the test set is:', accuracy_score(smote_y_test, test_preds))\n",
     "print('\\n')\n",
     "#Create the ROC curve and AUC for both sets\n",
     "#start by getting the probability for each od the sets\n",
@@ -3802,7 +3805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 313,
+   "execution_count": 383,
    "metadata": {},
    "outputs": [
     {
@@ -3810,14 +3813,39 @@
      "output_type": "stream",
      "text": [
       "Grid Search found the following optimal parameters: \n",
-      "learning_rate: 0.1\n",
+      "learning_rate: 0.2\n",
       "max_depth: 30\n",
       "min_child_weight: 1\n",
       "n_estimators: 100\n",
       "subsample: 0.7\n",
+      "The classification report for the training set is:\n",
+      "              precision    recall  f1-score   support\n",
       "\n",
-      "Training Accuracy: 83.55%\n",
-      "Validation accuracy: 87.79%\n"
+      "           0       1.00      0.99      1.00      2128\n",
+      "           1       0.99      1.00      1.00      2128\n",
+      "\n",
+      "    accuracy                           1.00      4256\n",
+      "   macro avg       1.00      1.00      1.00      4256\n",
+      "weighted avg       1.00      1.00      1.00      4256\n",
+      "\n",
+      "\n",
+      "\n",
+      "The classification report for the test set is:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.94      0.79      0.86       544\n",
+      "           1       0.82      0.95      0.88       544\n",
+      "\n",
+      "    accuracy                           0.87      1088\n",
+      "   macro avg       0.88      0.87      0.87      1088\n",
+      "weighted avg       0.88      0.87      0.87      1088\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "Training Accuracy: 99.67%\n",
+      "Validation accuracy: 86.95%\n"
      ]
     }
    ],
@@ -3847,6 +3875,14 @@
     "training_accuracy = accuracy_score(smote_y_train, training_preds)\n",
     "test_accuracy = accuracy_score(smote_y_test, test_preds)\n",
     "\n",
+    "print('The classification report for the training set is:')\n",
+    "print(classification_report(smote_y_train, training_preds))\n",
+    "print('\\n')\n",
+    "print('The classification report for the test set is:')\n",
+    "print(classification_report(smote_y_test, test_preds))\n",
+    "print('\\n\\n')\n",
+    "\n",
+    "#Show accuracy \n",
     "print('')\n",
     "print('Training Accuracy: {:.4}%'.format(training_accuracy * 100))\n",
     "print('Validation accuracy: {:.4}%'.format(test_accuracy * 100))"
@@ -3858,7 +3894,7 @@
    "source": [
     "Model Performance:\n",
     "- Training Accuracy = 83.55%:\n",
-    "This indicates that the model does not perfectly fit the training data, which is generally a good sign as it suggests the model is not overfitting. Given that you are using techniques like Grid Search and parameters that balance complexity and generalization, this lower training accuracy reflects a more generalized model.\n",
+    "This indicates that the model does not perfectly fit the training data, which is generally a good sign as it suggests the model is not overfitting. \n",
     "- Validation Accuracy = 87.79%:\n",
     "The validation accuracy is higher than the training accuracy, suggesting that the model is performing well on unseen data (validation set) and that overfitting has been reduced. This is a positive sign of a well-generalized model that can predict accurately on test data."
    ]
@@ -4369,6 +4405,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Logistic Regression for Multiclass classification"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 330,
    "metadata": {},
@@ -4811,7 +4854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 339,
+   "execution_count": 385,
    "metadata": {},
    "outputs": [
     {
@@ -4845,9 +4888,7 @@
       "\n",
       "\n",
       "\n",
-      "\n",
-      "The accuracy score for the train set is: 0.8620689655172413\n",
-      "The accuracy score for the test set is: 0.8607198748043818\n"
+      "\n"
      ]
     }
    ],
@@ -4862,13 +4903,7 @@
     "print('\\n\\n')\n",
     "print('The outcome of the test classification report is:')\n",
     "print(mc_test_class_report)\n",
-    "print('\\n\\n')\n",
-    "#Now let's look at the accuracy score for both sets \n",
-    "mc_train_acc = accuracy_score(mc_y_train, mc_y_log_train_pred)\n",
-    "mc_test_acc = accuracy_score(mc_y_test, mc_y_log_test_pred)\n",
-    "#Display the results of the accuracy score\n",
-    "print('The accuracy score for the train set is:', train_acc)\n",
-    "print('The accuracy score for the test set is:', test_acc)\n"
+    "print('\\n\\n')\n"
    ]
   },
   {
@@ -4894,8 +4929,9 @@
     "- Precision = 0.87: The model predicted class 1 correctly in 87% of the cases where it made such a prediction.\n",
     "Recall = 1.00: The model captured all instances of class 1 (100% recall).\n",
     "- F1-score = 0.93: Strong performance for class 1, likely dominating the overall accuracy due to the imbalance between class sizes.\n",
+    "\n",
     "Test Set Results:\n",
-    "- Accuracy: 86.07%\n",
+    "- Accuracy: 84%\n",
     "\n",
     "The model's performance on the test set is consistent with the training set, showing a similar accuracy of around 86%.\n",
     "`Class -1`:\n",
@@ -4913,6 +4949,7 @@
     "- F1-score = 0.91: The model shows strong performance for class 1, similar to the training set.\n",
     "\n",
     "Key Issues & Insights:\n",
+    "\n",
     "`Class Imbalance`:\n",
     "\n",
     "The model struggles to recognize class -1 (especially in recall) and completely fails to classify class 0. This suggests there is a class imbalance, with the majority of instances likely being in class 1, leading to bias in the model's predictions.\n",
@@ -4925,13 +4962,10 @@
     "\n",
     "The model performs well on class 1 in both training and test sets, likely because class 1 has the majority of instances, but it overfits to this class while neglecting the other two classes, especially class 0.\n",
     "Recommendations:\n",
+    "\n",
     "`Address Class Imbalance`:\n",
     "\n",
-    "Apply techniques such as SMOTE (Synthetic Minority Over-sampling Technique) or class weighting to balance the training set. This will help the model better learn to distinguish the minority classes (-1 and 0) while reducing the bias toward class 1.\n",
-    "\n",
-    "`Adjust the Model`:\n",
-    "\n",
-    "Consider using models that handle class imbalance better, such as Random Forests, XGBoost (with class weighting or oversampling), or Gradient Boosting Machines."
+    "Apply techniques such as SMOTE (Synthetic Minority Over-sampling Technique) or class weighting to balance the training set. This will help the model better learn to distinguish the minority classes (-1 and 0) while reducing the bias toward class 1.\n"
    ]
   },
   {
@@ -4952,6 +4986,13 @@
     "#fit on the train and seets\n",
     "mc_smote_X_train, mc_smote_y_train = mc_smote.fit_resample(mc_X_train, mc_y_train)\n",
     "mc_smote_X_test, mc_smote_y_test = mc_smote.fit_resample(mc_X_test, mc_y_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Logistic Regression with SMOTE applied"
    ]
   },
   {
@@ -5462,6 +5503,7 @@
     "- Class -1: Precision = 0.97, Recall = 0.98, F1-score = 0.97\n",
     "- Class 0: Precision = 0.97, Recall = 1.00, F1-score = 0.98\n",
     "- Class 1: Precision = 0.99, Recall = 0.96, F1-score = 0.98\n",
+    "\n",
     "These scores suggest the model is performing very well on all three classes in the training set.\n",
     "\n",
     "Test Set Results:\n",
@@ -5570,6 +5612,7 @@
     "- Class -1: Precision = 1.00, Recall = 1.00, F1-score = 1.00\n",
     "- Class 0: Precision = 1.00, Recall = 1.00, F1-score = 1.00\n",
     "- Class 1: Precision = 1.00, Recall = 1.00, F1-score = 1.00\n",
+    "\n",
     "The model is perfectly predicting all instances of each class, which is generally a sign of overfitting.\n",
     "\n",
     "`Test Set Results`:\n",
@@ -5747,7 +5790,52 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## CONCLUSIONS AND RECOMMENDATION\n",
+    "\n",
+    "### COCLUSIIONS\n",
+    " #### BINARY CLASSIFICATION\n",
+    " We used three models i.e Logistic Rgression, Decision tree and XGBoost for modeling the data for binary target.\n",
+    " - Logistic Regression\n",
+    " It had an accuracy of 86.07% on the test data \n",
+    " - Logistic Regression with SMOTE\n",
+    " Accuracy of 73.89% on the test set\n",
+    " - Decision Tree \n",
+    " accuracy of 75.64% on the test set\n",
+    " - XGBoost\n",
+    " It had an accuracy of 86.31% on the test set\n",
+    " - Tuned XGBoost\n",
+    " It had an accuracy of 87.79 on the test set\n",
+    "From the data above it was eVident that the XGBoost Model was the best to use for the Binary Classification with the highest accuracy of 87.79%. Meaning it performed the best on unseen data.\n",
+    "\n",
+    " #### MULTICLASS CLASSIFICATION\n",
+    " The models used performed as follows:\n",
+    " - Logistic Regression\n",
+    " It had an accuracy of 84% on the test set\n",
+    "\n",
+    " This showed us that we had an imbalance hence we needed to apply SMOTE to address issue of class imbalance\n",
+    " - Logistic Regression with SMOTE\n",
+    " It had an accuracy of 51.59% on the test set\n",
+    " - Decision Tree\n",
+    " It had an accuracy of 80.88% on the test set\n",
+    " - XGBoost\n",
+    " It had an accuracy of 44.24% on the test set\n",
+    " After addressing the issue with the class imbalance we could clearly see that the ebest model would be the Decision Tree with an accuracy of 80.88%\n",
+    "\n",
+    "### RECOMMENDATIONS\n",
+    "\n",
+    "1) Address Negative Sentiment Through Targeted Feedback:\n",
+    "\n",
+    "Although the negative sentiment is relatively low, it's still essential to address concerns promptly. Monitoring negative sentiments, especially those related to specific products like Google and iPhone, can help companies quickly resolve issues and improve customer experiences.\n",
+    "\n",
+    "2) Encourage Neutral Sentiment Engagement:\n",
+    "\n",
+    "A significant portion of the tweets are neutral, showing \"No emotion toward brand or product.\" This provides an opportunity to engage neutral audiences and convert them into advocates. Encouraging user interaction through promotions, updates, and addressing questions can help turn neutral sentiments into positive ones.\n",
+    "\n",
+    "3) Model Selection:\n",
+    "\n",
+    "For binary classification the best model would be the XGBoost with an accuracy of 87.79%. While for a multiclass classification approach the best model would be to use the Decision Tree with an accuracy of 80.88%. Further tuning could improve the models' performances for both the binary and multiclass classification tasks."
+   ]
   }
  ],
  "metadata": {
