--- a/twitter_sentiment_analysis.ipynb
+++ b/twitter_sentiment_analysis.ipynb
@@ -6055,7 +6055,7 @@
     " It had an accuracy of 60.24% on the test set\n",
     " - XGBoost\n",
     " It had an accuracy of 44.24% on the test set\n",
-    " After addressing the issue with the class imbalance we could clearly see that the ebest model would be the Decision Tree with an accuracy of 80.88%\n",
+    " After addressing the issue with the class imbalance we could clearly see that the best model would be the Decision Tree with an accuracy of 60.24%\n",
     "\n",
     "### RECOMMENDATIONS\n",
     "\n",
